item template, lambda bare bones
